# chitchat

./: CMakeLists.txt  build.bat
client/: CMakeLists.txt  client.cpp  ui.cpp  ui.h
server/: CMakeLists.txt  server.cpp
utils/: CMakeLists.txt  socket_utils.cpp  socket_utils.h
